# CSOPESY-MCO

./: .clangd  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  config.txt  csopesy-log.txt
assets/: introText.txt
include/: config.hpp  console.hpp  console_state.hpp  globals.hpp  parser.hpp  terminal_utils.hpp
include/commands/: add_command.hpp  declare_command.hpp  for_command.hpp  icommand.hpp  operand.hpp  print_command.hpp  sleep_command.hpp  subtract_command.hpp
include/scheduler/: core_worker.hpp  fcfsscheduler.hpp  global_scheduler.hpp  ietthread.hpp  ischeduler.hpp  process.hpp  process_cache.hpp  process_factory.hpp  rrscheduler.hpp
openspec/changes/csopesy-process-scheduler-cli/: architecture-overview.md  design.md  preparation-plan.md  proposal.md  tasks.md
openspec/changes/csopesy-process-scheduler-cli/specs/csopesy-process-scheduler-cli/: spec.md
src/: config.cpp  config.txt  console.cpp  console_state.cpp  globals.cpp  main.cpp  parser.cpp  terminal_utils.cpp
src/commands/: add_command.cpp  declare_command.cpp  for_command.cpp  operand.cpp  print_command.cpp  sleep_command.cpp  subtract_command.cpp
src/scheduler/: core_worker.cpp  fcfsscheduler.cpp  global_scheduler.cpp  ietthread.cpp  process.cpp  process_factory.cpp  rrscheduler.cpp
